# CDFTOOLS

./: .gitignore  CMakeLists.txt  Makefile  Makefile_ursus  README.md  bimgcaltrans.f90  bimgmoy4.f90  cdf16bit.f90  cdf2levitusgrid2d.f90  cdf2levitusgrid3d.f90  cdf2matlab.f90  cdf_xtrac_brokenline.f90  cdfbathy.f90  cdfbci.f90  cdfbn2-full.f90  cdfbn2.f90  cdfbotpressure.f90  cdfbottom.f90  cdfbottomsig.f90  cdfbottomsig0.f90  cdfbottomsigi.f90  cdfbti.f90  cdfbuoyflx.f90  cdfcensus-0.f90  cdfcensus.f90  cdfclip.f90  cdfcmp.f90  cdfcofdis.f90  cdfcofpoint.f90  cdfcoloc.f90  cdfcoloc2.f90  cdfcoloc2D.f90  cdfcoloc3.f90  cdfconvert.f90  cdfcsp.f90  cdfcurl.f90  cdfdegradt.f90  cdfdegradu.f90  cdfdegradv.f90  cdfdegradw.f90  (+189 more)
DEV_TOOLS/: cdf_classes.txt  liste  tagCreateOutput.tpl  tagfunction.tpl  tagmodule.tpl  tagnc4.tpl  tagprogram.tpl  tagroutine.tpl  tagteos10.tpl  tagusage.tpl
DOC/: Makefile  cdfovide_guide.tex  cdftools.css  cdftools.html  cdftools_prog.tex  cdftools_user.tex  chkguide.ksh  chkuserdone.ksh  template.tex
JOBS/: cdf16bit.ll  cdfbn2.ll  cdfbuoyflx.ksh  cdfeke-inter.ll  cdfeke.ll  cdfets.ll  cdfflxconv.ll  cdfgib.ll  cdfhflx.ll  cdfice.ll  cdfmaxmoc.ll  cdfmaxmoc40.ll  cdfmeanvar.ll  cdfmhst-full.ll  cdfmhst.ll  cdfmoc-full.ll  cdfmoc-inter.ll  cdfmoc.ll  cdfmoy-ets.ll  cdfmoy-inter.ll  cdfmoy-inter_month.ll  cdfmoy.ll  cdfmoy_jade_new.ksh  cdfmoy_multiple.ksh  cdfmoy_skel_new.ksh  cdfmoy_skel_vargas.ksh  cdfmoy_trc_skel_new.ksh  cdfmoymxl.ll  cdfmoyvt_jade_new.ksh  cdfmoyvt_skel_new.ksh  cdfmxl.ll  cdfpsi-inter.ll  cdfpsi.ll  cdfrms.ll  cdfsigma0.ll  cdfsigtrp_1month.ll  cdfsstconv.ll  cdfstrconv.ll  cdftransportiz-full.ll  cdftransportiz.ll  (+40 more)
JOBS/MKMTL/: gib.ksh  heat.ksh  ice.ksh  ice_month.ksh  maxmoc.ksh  maxmoc40.ksh  mkmtl.ksh  nino.ksh  profile.ksh  profile_lev.ksh  section.ksh  trc.ksh  trpsig.ksh
License/: CDFTOOLSCeCILL.txt
Macrolib/: macro.ada  macro.adastra_cray  macro.adastra_intel  macro.bsc  macro.cal1  macro.conda  macro.curie  macro.dahu  macro.esmtools  macro.ftn_hlrn_nc4  macro.g95  macro.gforhp  macro.gfortran  macro.gfortran_hlrn  macro.gfortran_hlrn_nc4  macro.gorgon  macro.hplaptop  macro.icm  macro.ifort  macro.ifort_dell  macro.ifort_hlrn4_nc4  macro.ifort_hlrn_nc4  macro.ifort_locean  macro.ifort_nesh_fe  macro.ifort_ursus  macro.irene  macro.jade  macro.jean-zay  macro.lgge  macro.mac  macro.meolkara  macro.meolkerg  macro.meto  macro.meto_home  macro.meto_xc40  macro.mirage  macro.nymphea  macro.occigen  macro.occigen2  macro.oneapi_nesh_login  (+9 more)
src/: .gitignore  CMakeLists.txt  Makefile  cdf16bit.f90  cdf2levitusgrid2d.f90  cdf2levitusgrid3d.f90  cdf2matlab.f90  cdf2regular.f90  cdf_classes.txt  cdf_compress.f90  cdf_conv_zgr.F90  cdf_domain2bathy.f90  cdf_domain_modif.f90  cdf_dynadv_ubs.f90  cdf_dyndt.f90  cdf_dynhpg.f90  cdf_dynspg_ts.f90  cdf_dynvor.f90  cdf_dynzdf_imp.f90  cdf_gsw.F90  cdf_remake_bathy.f90  cdf_xtrac_brokenline.f90  cdfbathy.f90  cdfbci.f90  cdfbn2.f90  cdfbotpressure.f90  cdfbottom.f90  cdfbottomsig.f90  cdfbti.f90  cdfbuoyflx.f90  cdfcensus.f90  cdfcheckic.f90  cdfchgrid.f90  cdfclip.f90  cdfcmp.f90  cdfcoast.f90  cdfcoastline.f90  cdfcofdis.f90  cdfcoloc.f90  cdfconvert.f90  (+166 more)
src/MODIFIED/: cdf16bit.f90  cdf2levitusgrid3d.f90  cdf2matlab.f90  cdfbathy.f90  cdfbn2.f90  cdfbottom.f90  cdfbuoyflx.f90  cdfcensus.f90  cdfchgrid.f90  cdfcmp.f90  cdfcoastline.f90  cdfcofdis.f90  cdfcoloc.f90  cdfcsp.f90  cdfcurl.f90  cdfdegrad.f90  cdfdifmask.f90  cdfdiv.f90  cdfeddyscale.f90  cdfeddyscale_pass1.f90  cdfeke.f90  cdfenstat.f90  cdfets.f90  cdffindij.f90  cdffixtime.f90  cdffracinv.f90  cdffwc.f90  cdfgeo-uv.f90  cdfgeostrophy.f90  cdfgradT.f90  cdfhdy.f90  cdfhdy3d.f90  cdfheatc.f90  cdfhflx.f90  cdfhgradb.f90  cdficb_diags.f90  cdficediags.f90  cdfimprovechk.f90  cdfinfo.f90  cdfio.F90  (+88 more)
