
cmake_minimum_required(VERSION 3.1)
project(CDFTOOLS Fortran)


set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin/)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib/)
set(ARCHIVE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib/)
set(INSTALL_FOLDER $ENV{HOME}/bin/CDFTOOLS)

SET(COMMON_COMPILER_FLAGS "-fno-second-underscore -ffree-line-length-256")
SET(DEBUG_COMPILER_FLAGS "-Og -g")
SET(RELEASE_COMPILER_FLAGS "-O2")

set(CMAKE_Fortran_FLAGS_DEBUG "${DEBUG_COMPILER_FLAGS}")
set(CMAKE_Fortran_FLAGS_RELEASE "${RELEASE_COMPILER_FLAGS}")

string(REPLACE ":" ";" INCLUDE_DIRS $ENV{CPATH})
string(REPLACE ":" ";" LIB_DIRS $ENV{LD_LIBRARY_PATH})

include_directories(${INCLUDE_DIRS})
link_directories(${LIB_DIRS})

SET( CMAKE_Fortran_FLAGS  "${CMAKE_Fortran_FLAGS} ${COMMON_COMPILER_FLAGS}" )

add_subdirectory(src)

install(DIRECTORY ${EXECUTABLE_OUTPUT_PATH} DESTINATION ${INSTALL_FOLDER}
        PATTERN *
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ )

