# Modules

add_library(modcdfnames modcdfnames.f90)
add_library(modpoly modpoly.f90)

add_library(cdfio cdfio.F90)
target_link_libraries (cdfio modcdfnames -lnetcdf -lnetcdff)

add_library(cdftools cdftools.f90)
target_link_libraries (cdftools cdfio)

add_library(eos eos.f90)
target_link_libraries (eos cdfio)

add_library(modutils modutils.f90)
target_link_libraries (modutils cdfio)

# Executables

link_libraries(cdfio)

add_executable(cdfmsk cdfmsk.f90)
add_executable(cdfmkmask cdfmkmask.f90)
add_executable(cdfmeshmask cdfmeshmask.f90)
add_executable(cdfmltmask cdfmltmask.f90)
add_executable(cdfdifmask cdfdifmask.f90)
add_executable(cdfcurl cdfcurl.f90)
add_executable(cdfdiv cdfdiv.f90)
add_executable(cdflap cdflap.f90)
add_executable(cdfmoy cdfmoy.f90)
add_executable(cdfmoyt cdfmoyt.f90)
add_executable(cdfenstat cdfenstat.f90)
add_executable(cdfmoy_freq cdfmoy_freq.f90)
add_executable(cdfmoyuvwt cdfmoyuvwt.f90)
add_executable(cdfstd cdfstd.f90)
add_executable(cdfmoy_weighted cdfmoy_weighted.f90)
add_executable(cdfeke cdfeke.f90)
add_executable(cdfrmsssh cdfrmsssh.f90)
add_executable(cdfstdevw cdfstdevw.f90)
add_executable(cdfstdevts cdfstdevts.f90)
add_executable(cdfvT cdfvT.f90)
target_link_libraries (cdfvT modutils)
add_executable(cdfuv cdfuv.f90)
target_link_libraries (cdfuv modutils)
add_executable(cdfvsig cdfvsig.f90)
target_link_libraries (cdfvsig eos modutils)
add_executable(cdfspeed cdfspeed.f90)
add_executable(cdfimprovechk cdfimprovechk.f90)
add_executable(cdfstats cdfstats.f90)
target_link_libraries (cdfstats modutils)
add_executable(cdflinreg cdflinreg.f90)
add_executable(cdfbottom cdfbottom.f90)
add_executable(cdfokubo-w cdfokubo-w.f90)
add_executable(cdfeddyscale cdfeddyscale.f90)
add_executable(cdfeddyscale_pass1 cdfeddyscale_pass1.f90)
add_executable(cdfw cdfw.f90)
add_executable(cdfgeo-uv cdfgeo-uv.f90)
add_executable(cdfrhoproj cdfrhoproj.f90)
add_executable(cdfzisot cdfzisot.f90)
add_executable(cdfsigintegr cdfsigintegr.f90)
target_link_libraries (cdfsigintegr modutils)
add_executable(cdfgradT cdfgradT.f90)
add_executable(cdfbci cdfbci.f90)
add_executable(cdfbti cdfbti.f90)
add_executable(cdfnrjcomp cdfnrjcomp.f90)
add_executable(cdfmhst cdfmhst.f90)
add_executable(cdfvhst cdfvhst.f90)
add_executable(cdfvtrp cdfvtrp.f90)
add_executable(cdfpsi cdfpsi.f90)
target_link_libraries (cdfpsi modutils)
add_executable(cdfpsi_level cdfpsi_level.f90)
add_executable(cdftransport cdftransport.f90)
target_link_libraries (cdftransport modutils)
add_executable(cdfvFWov cdfvFWov.f90)
add_executable(cdftempvol-full cdftempvol-full.f90)
add_executable(cdfmean cdfmean.f90)
add_executable(cdfdegradt cdfdegradt.f90)
add_executable(cdfdegradu cdfdegradu.f90)
add_executable(cdfdegradv cdfdegradv.f90)
add_executable(cdfdegradw cdfdegradw.f90)
add_executable(cdfsum cdfsum.f90)
add_executable(cdfvertmean cdfvertmean.f90)
target_link_libraries (cdfvertmean modutils)
add_executable(cdfvint cdfvint.f90)
target_link_libraries (cdfvint modutils)
add_executable(cdfheatc cdfheatc.f90)
target_link_libraries (cdfheatc modutils)
add_executable(cdfmxlheatc cdfmxlheatc.f90)
target_link_libraries (cdfmxlheatc modutils)
add_executable(cdfmxlsaltc cdfmxlsaltc.f90)
target_link_libraries (cdfmxlsaltc modutils)
add_executable(cdficediags cdficediags.f90)
add_executable(cdfzonalmean cdfzonalmean.f90)
add_executable(cdfzonalmeanvT cdfzonalmeanvT.f90)
target_link_libraries (cdfzonalmeanvT modutils)
add_executable(cdfzonalsum cdfzonalsum.f90)
add_executable(cdfzonalout cdfzonalout.f90)
add_executable(cdfhflx cdfhflx.f90)
add_executable(cdfwflx cdfwflx.f90)
add_executable(cdfprofile cdfprofile.f90)
add_executable(cdfwhereij cdfwhereij.f90)
add_executable(cdffindij cdffindij.f90)
target_link_libraries (cdffindij cdftools)
add_executable(cdfweight cdfweight.f90)
target_link_libraries (cdfweight cdftools)
add_executable(cdfcoloc cdfcoloc.f90)
add_executable(cdf2levitusgrid2d cdf2levitusgrid2d.f90)
target_link_libraries (cdf2levitusgrid2d modutils cdftools)
add_executable(cdf2levitusgrid3d cdf2levitusgrid3d.f90)
target_link_libraries (cdf2levitusgrid3d modutils cdftools)
add_executable(cdfstatcoord cdfstatcoord.f90)
add_executable(cdfpdf cdfpdf.f90)
target_link_libraries (cdfpdf modutils)
add_executable(cdfmaxmoc cdfmaxmoc.f90)
add_executable(cdfzoom cdfzoom.f90)
add_executable(cdfmax cdfmax.f90)
add_executable(cdfprobe cdfprobe.f90)
add_executable(cdfinfo cdfinfo.f90)
add_executable(cdfclip cdfclip.f90)
add_executable(cdfsmooth cdfsmooth.f90)
target_link_libraries (cdfsmooth modutils)
add_executable(cdfpendep cdfpendep.f90)
add_executable(cdffracinv cdffracinv.f90)
add_executable(cdf16bit cdf16bit.f90)
add_executable(cdf2matlab cdf2matlab.f90)
add_executable(cdfvita cdfvita.f90)
add_executable(cdfvita-geo cdfvita-geo.f90)
add_executable(cdfconvert cdfconvert.f90)
add_executable(cdfflxconv cdfflxconv.f90)
add_executable(cdfsstconv cdfsstconv.f90)
add_executable(cdfstrconv cdfstrconv.f90)
add_executable(cdfbathy cdfbathy.f90)
add_custom_command(TARGET cdfbathy 
                    POST_BUILD 
                    COMMAND ln -sf  cdfbathy cdfvar
                    WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}
                    COMMENT "cdfvar is just an alias of cdfbathy")
add_executable(cdfcofdis cdfcofdis.f90)
add_executable(cdfcoastline cdfcoastline.f90)
add_executable(cdfcsp cdfcsp.f90)
add_executable(cdfnan cdfnan.f90)
add_executable(cdfscale cdfscale.f90)
add_executable(cdfnorth_unfold cdfnorth_unfold.f90)
add_executable(cdfpolymask cdfpolymask.f90)
target_link_libraries (cdfpolymask modpoly)
add_executable(cdfovide cdfovide.f90)
add_executable(cdf_xtrac_brokenline cdf_xtrac_brokenline.f90)
target_link_libraries (cdf_xtrac_brokenline cdftools)
add_executable(cdfmppini cdfmppini.f90)
add_executable(cdffixtime cdffixtime.f90)
add_executable(cdfnamelist cdfnamelist.f90)
add_executable(cdfchgrid cdfchgrid.f90)
target_link_libraries (cdfchgrid modutils)
add_executable(cdfcmp cdfcmp.f90)
add_executable(cdfisf_rnf cdfisf_rnf.f90)
add_executable(cdfisf_forcing cdfisf_forcing.f90)
target_link_libraries (cdfisf_forcing modutils)
add_executable(cdfisf_fill cdfisf_fill.f90)
target_link_libraries (cdfisf_fill modutils)
add_executable(cdfisf_poolchk cdfisf_poolchk.f90)
target_link_libraries (cdfisf_poolchk modutils)
# add_executable(cdficbclimato cdficbclimato.f90)
# add_executable(cdficbdiags cdficbdiags.f90)

link_libraries(eos)

add_executable(cdfbn2 cdfbn2.f90)
add_executable(cdfrichardson cdfrichardson.f90)
add_executable(cdfsig0 cdfsig0.f90)
add_executable(cdfsigntr cdfsigntr.f90)
add_executable(cdfspice cdfspice.f90)
add_executable(cdfsigi cdfsigi.f90)
add_executable(cdfsiginsitu cdfsiginsitu.f90)
add_executable(cdfbottomsig cdfbottomsig.f90)
add_executable(cdfbotpressure cdfbotpressure.f90)
target_link_libraries (cdfbotpressure modutils)
add_executable(cdfets cdfets.f90)
add_executable(cdfgeostrophy cdfgeostrophy.f90)
add_executable(cdfmxl cdfmxl.f90)
add_executable(cdfisopsi cdfisopsi.f90)
add_executable(cdfpvor cdfpvor.f90)
add_executable(cdfkempemekeepe cdfkempemekeepe.f90)
add_executable(cdfhdy cdfhdy.f90)
add_executable(cdfhdy3d cdfhdy3d.f90)
add_executable(cdfmxlhcsc cdfmxlhcsc.f90)
add_executable(cdfbuoyflx cdfbuoyflx.f90)
add_executable(cdfcensus cdfcensus.f90)
add_executable(cdfsections cdfsections.f90)

add_executable(cdftransig_xy3d cdftransig_xy3d.f90)
target_link_libraries (cdftransig_xy3d modutils)
add_executable(cdfmoc cdfmoc.f90)
target_link_libraries (cdfmoc cdftools)
add_executable(cdfmht_gsop cdfmht_gsop.f90)
add_executable(cdfmocsig cdfmocsig.f90)
target_link_libraries (cdfmocsig modutils)
add_executable(cdfsigtrp cdfsigtrp.f90)
target_link_libraries (cdfsigtrp modutils)
add_executable(cdfsigtrp_broken cdfsigtrp_broken.f90)
target_link_libraries (cdfsigtrp_broken modutils)









